# sruc

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: build.yml
ei/: Cargo.toml  config.toml
ei/src/: ei.proto  ei.rs  lib.rs
ei/src/ei/: custom_traits.rs
leaderboard/: Cargo.toml
leaderboard/src/: api.rs  contracts.rs  custom_errors.rs  egg_inc_api.rs  ei_request.rs  error.rs  formatter.rs  lib.rs  main.rs  report_generator.rs  table_builder.rs
leaderboard/src/api/: maj_api.rs
leaderboard/src/contracts/: active_contract.rs  coop.rs  coop_flag.rs
leaderboard/src/formatter/: discord_formatter.rs  discord_table.rs  discord_timestamp.rs  duration.rs  sruc_table_formatter.rs  string_formatter.rs
leaderboard/src/report_generator/: sruc.rs
src/: ei.proto  ei_struct.rs  lib.rs  main.rs  table_builder.rs
src/ei_struct/: builder.rs
