[package]
name = "sruc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base64 = "0.21.7"
chrono = "0.4.31"
prost = "0.12.3"
prost-build = "0.12.3"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
zune-inflate = "0.2.54"

[build-dependencies]
prost-build = { version = "0.12.3" }
