[package]
name = "ei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
prost = "0.12.3"
prost-build = "0.12.3"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = { version = "0.12.3" }
