[package]
name = "ei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
dotenvy_macro = "0.15.7"
prost = "0.12.3"
prost-build = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.0"
reqwest = "0.11.25"
zune-inflate = "0.2.54"
anyhow = "1.0.79"

[build-dependencies]
prost-build = { version = "0.12.3" }
