[package]
name = "leaderboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
base64 = "0.22.0"
chrono = "0.4.31"
prost = "0.12.3"
prost-build = "0.12.3"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "time",
] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
zune-inflate = "0.2.54"
ei = { path = "../ei" }
log = "0.4.21"
env_logger = "0.11.3"
time = "0.3.36"
dotenvy_macro = "0.15.7"
